--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
   "homepage": "https://github.com/prasademc/BulmaWebComponents#readme",
   "dependencies": {
     "bulma": "^0.7.4",
-    "lit-element": "^2.0.1"
+    "lit-static": "^2.0.1"
   }
 }
