--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple startor kit with lightweight web components using lit-html, lit-element and Bulma.",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "postinstall": "npx gulp"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,10 @@
   "dependencies": {
     "bulma": "^0.7.4",
     "lit-static": "^2.0.1"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2"
   }
 }
