--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
   "homepage": "https://github.com/prasademc/BulmaWebComponents#readme",
   "dependencies": {
     "bulma": "^0.7.4",
-    "lit-static": "^2.0.1"
+    "lit-static": "^2.0.1",
+  "tar": ">=4.4.2"
   },
   "devDependencies": {
     "gulp": "^4.0.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^4.0.2",
+    "tar": ">=4.4.2"
   }
 }
